refactor: req 01, 02, 03 and 04

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         tools:layout_editor_absoluteY="1dp">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/detail_image"
+            android:id="@+id/main_logo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -27,7 +27,7 @@
             android:src="@drawable/logo" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/item_menu_name"
+            android:id="@+id/main_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
