--- a/app/src/main/res/layout/activity_menu_item_detail.xml
+++ b/app/src/main/res/layout/activity_menu_item_detail.xml
@@ -33,7 +33,7 @@
             android:src="@drawable/logo" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/item_menu_name"
+            android:id="@+id/detail_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
