--- a/app/src/main/res/layout/activity_menu_item_detail.xml
+++ b/app/src/main/res/layout/activity_menu_item_detail.xml
@@ -61,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="Nome do prato"
+            android:text=""
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="18sp"
@@ -76,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="Descrição do prato"
+            android:text=""
             android:textAlignment="center"
             android:textColor="@color/gray"
             android:textSize="18sp"
@@ -90,7 +90,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
-            android:text="R$ 00,00"
+            android:text=""
             android:textAlignment="textStart"
             android:textColor="@color/Tertiary"
             android:textSize="18sp"
